1997-12-09  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-garuti.adb, s-garuti.ads: Add critical section utilities.

	* s-ganata.adb: Implementation of an hash table.

	* s-gartab.adb, s-gartab.ads: Implementation of two generic
 	tables. Concurrent is a generic table which allows atomic
 	operations on items in the table. Sequential table is a more
 	classical generic table.
	
	* s-parint.adb: New RCI Name Server implementation. Use garlic
	generic tables and hash table.

1997-12-08  Samuel Tardieu <sam@inf.enst.fr>
        
        * s-rpc.ads: (Get_RPC_Receiver): new private function.
        
        * s-rpc.adb: (Get_RPC_Receiver): new function.
        (Current_RPC_Receiver): new atomic variable holding the current
        RPC receiver.
        (Current_RPC_Receiver_Barrier): barrier to wait for the RPC
        receiver to be installed.
        
        * s-rpcpoo.adb: Use Get_RPC_Receiver instead of Receiver_Map.
        
        * s-rpcuti.ads: Remove useless Receiver_Map.
        
        * s-garcac.ads, s-garcac.adb: Obsolete files.
        
        * Makefile.am: Remove dependencies over s-garcac.*.
        
1997-12-04  Samuel Tardieu <sam@inf.enst.fr>
        
        * s-parint.ads: Remove GNAT 3.09 bug workaround.
        
        * s-parint.adb: Typos.
        
1997-10-31  Samuel Tardieu <sam@inf.enst.fr>
        
        * s-rpcpoo.adb: Increase task's storage size up to 3_000_000
        bytes.
        
        * s-garuti.ads: Move To_Stream_Element_Array and
        To_Params_Stream_Type into System.Garlic.Streams.
        
        * s-garuti.adb: Idem.
        
        * s-garter.adb: Remove pragma Storage_Size on task.
        
        * s-gartcp.adb: Use dynamic allocation of streams.
        
        * s-garrep.adb: Remove pragma Storage_Size on task.
        
        * s-garhea.adb: Use dynamic allocation of streams.
        
        * s-garfil.ads, s-garfil.adb, s-gafizi.ads, s-gafizi.adb,